Reformatting code, refactoring