@@ -4,15 +4,20 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.folio.dataexp.util.Constants.DEFAULT_AUTHORITY_JOB_PROFILE_ID;
 import static org.folio.dataexp.util.Constants.DEFAULT_HOLDINGS_JOB_PROFILE_ID;
 import static org.folio.dataexp.util.Constants.DEFAULT_INSTANCE_JOB_PROFILE_ID;
+import static org.folio.dataexp.util.ErrorCode.ERROR_DUPLICATED_IDS;
+import static org.folio.dataexp.util.ErrorCode.ERROR_INVALID_CQL_SYNTAX;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.Mockito.atLeast;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
@@ -20,19 +25,30 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import jakarta.persistence.EntityNotFoundException;
+import java.io.ByteArrayInputStream;
 import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
+import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import lombok.SneakyThrows;
 import org.folio.dataexp.TestMate;
+import org.folio.dataexp.client.SearchClient;
 import org.folio.dataexp.client.UserClient;
 import org.folio.dataexp.domain.dto.ExportAllRequest;
 import org.folio.dataexp.domain.dto.ExportRequest;
 import org.folio.dataexp.domain.dto.FileDefinition;
+import org.folio.dataexp.domain.dto.IdsJob;
+import org.folio.dataexp.domain.dto.IdsJobPayload;
 import org.folio.dataexp.domain.dto.JobExecution;
 import org.folio.dataexp.domain.dto.JobExecutionProgress;
 import org.folio.dataexp.domain.dto.JobProfile;
+import org.folio.dataexp.domain.dto.ResourceIds;
 import org.folio.dataexp.domain.dto.User;
+import org.folio.dataexp.domain.entity.ExportIdEntity;
 import org.folio.dataexp.domain.entity.FileDefinitionEntity;
 import org.folio.dataexp.domain.entity.JobProfileEntity;
 import org.folio.dataexp.domain.entity.MappingProfileEntity;
@@ -44,7 +60,9 @@ import org.folio.dataexp.repository.InstanceEntityRepository;
 import org.folio.dataexp.repository.JobProfileEntityRepository;
 import org.folio.dataexp.repository.MappingProfileEntityRepository;
 import org.folio.dataexp.repository.MarcAuthorityRecordAllRepository;
+import org.folio.dataexp.service.logs.ErrorLogService;
 import org.folio.dataexp.service.validators.DataExportRequestValidator;
+import org.folio.s3.client.FolioS3Client;
 import org.folio.spring.FolioExecutionContext;
 import org.folio.spring.scope.FolioExecutionScopeExecutionContextManager;
 import org.junit.jupiter.api.Test;
@@ -52,37 +70,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import static org.mockito.ArgumentMatchers.anyString;
-import java.io.ByteArrayInputStream;
-import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import org.folio.dataexp.client.SearchClient;
-import org.folio.dataexp.domain.entity.ExportIdEntity;
-import org.folio.dataexp.service.CommonExportStatistic;
-import org.folio.dataexp.service.DataExportAllService;
-import org.folio.dataexp.service.DataExportService;
-import org.folio.dataexp.service.FileDefinitionsService;
-import org.folio.dataexp.service.InputFileProcessor;
-import org.folio.dataexp.service.InsertExportIdService;
-import org.folio.dataexp.service.JobExecutionService;
-import org.folio.dataexp.service.SingleFileProcessorAsync;
-import org.folio.dataexp.service.SlicerProcessor;
-import org.folio.dataexp.service.logs.ErrorLogService;
-import org.folio.s3.client.FolioS3Client;
-import org.mockito.Captor;
-import static org.folio.dataexp.util.ErrorCode.ERROR_DUPLICATED_IDS;
-import static org.mockito.Mockito.atLeast;
-import static org.mockito.Mockito.mock;
-import org.folio.dataexp.domain.dto.IdsJob;
-import org.folio.dataexp.domain.dto.IdsJobPayload;
-import org.folio.dataexp.domain.dto.ResourceIds;
-import static org.folio.dataexp.util.ErrorCode.ERROR_INVALID_CQL_SYNTAX;
 
 @ExtendWith(MockitoExtension.class)
 class DefaultJobProfileIdTest {
@@ -118,19 +109,15 @@ class DefaultJobProfileIdTest {
   @Mock private MarcAuthorityRecordAllRepository marcAuthorityRecordAllRepository;
   @Mock private ExportIdEntityRepository exportIdEntityRepository;
 
-    @Captor
-private ArgumentCaptor<List<ExportIdEntity>> batchCaptor;
+  @Captor private ArgumentCaptor<List<ExportIdEntity>> batchCaptor;
 
-    @Mock private SearchClient searchClient;
+  @Mock private SearchClient searchClient;
 
-    @Mock
-private InsertExportIdService insertExportIdService;
+  @Mock private InsertExportIdService insertExportIdService;
 
-    @Mock
-private ErrorLogService errorLogService;
+  @Mock private ErrorLogService errorLogService;
 
-    @Mock
-private FolioS3Client s3Client;
+  @Mock private FolioS3Client s3Client;
 
   @ParameterizedTest
   @EnumSource(value = ExportAllRequest.IdTypeEnum.class)
@@ -318,19 +305,11 @@ private FolioS3Client s3Client;
     verify(jobExecutionService, never()).getById(any(UUID.class));
   }
 
-    @Test
+  @Test
+  @TestMate(name = "TestMate-e78a0fbbddefda7f93b2e1922fb68c46")
   void testReadFileWhenUploadFormatIsCsvShouldProcessIdsAndSaveInBatches() {
-    // TestMate-e78a0fbbddefda7f93b2e1922fb68c46
     // Given
-    var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
     var jobExecutionId = UUID.fromString("00000000-0000-0000-0000-000000000002");
-    var fileName = "test.csv";
-    var fileDefinition =
-        new FileDefinition()
-            .id(fileDefinitionId)
-            .jobExecutionId(jobExecutionId)
-            .fileName(fileName)
-            .uploadFormat(FileDefinition.UploadFormatEnum.CSV);
     var jobExecution =
         new JobExecution()
             .id(jobExecutionId)
@@ -352,7 +331,6 @@ private FolioS3Client s3Client;
         .thenReturn(new ByteArrayInputStream(csvContent.getBytes(StandardCharsets.UTF_8)))
         .thenReturn(new ByteArrayInputStream(csvContent.getBytes(StandardCharsets.UTF_8)));
     when(exportIdEntityRepository.countByJobExecutionId(jobExecutionId)).thenReturn(1005L);
-    var commonExportStatistic = new CommonExportStatistic();
     // Instantiate the real processor using existing mocks to execute the actual logic
     var realInputFileProcessor =
         new InputFileProcessor(
@@ -362,13 +340,26 @@ private FolioS3Client s3Client;
             errorLogService,
             jobExecutionService,
             insertExportIdService);
-    // Use doAnswer to capture copies of the batch because the implementation clears the list reference
+    // Use doAnswer to capture copies of the batch because the implementation clears the list
+    // reference
     List<List<ExportIdEntity>> capturedBatches = new java.util.ArrayList<>();
-    doAnswer(invocation -> {
-      List<ExportIdEntity> batchArg = invocation.getArgument(0);
-      capturedBatches.add(new java.util.ArrayList<>(batchArg));
-      return null;
-    }).when(insertExportIdService).saveBatch(any());
+    doAnswer(
+            invocation -> {
+              List<ExportIdEntity> batchArg = invocation.getArgument(0);
+              capturedBatches.add(new java.util.ArrayList<>(batchArg));
+              return null;
+            })
+        .when(insertExportIdService)
+        .saveBatch(any());
+    var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
+    var fileName = "test.csv";
+    var fileDefinition =
+        new FileDefinition()
+            .id(fileDefinitionId)
+            .jobExecutionId(jobExecutionId)
+            .fileName(fileName)
+            .uploadFormat(FileDefinition.UploadFormatEnum.CSV);
+    var commonExportStatistic = new CommonExportStatistic();
     // When
     realInputFileProcessor.readFile(
         fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
@@ -378,39 +369,34 @@ private FolioS3Client s3Client;
     assertThat(commonExportStatistic.isFailedToReadInputFile()).isFalse();
     assertThat(commonExportStatistic.getInvalidUuidFormat()).isEmpty();
     assertThat(commonExportStatistic.getDuplicatedUuidAmount()).isZero();
-    
+
     assertThat(capturedBatches).hasSize(2);
     assertThat(capturedBatches.get(0)).hasSize(1000);
     assertThat(capturedBatches.get(1)).hasSize(5);
-    
+
     // Verify cleaning logic: check first two entities in first batch
     var firstBatch = capturedBatches.get(0);
-    assertThat(firstBatch.get(0).getInstanceId().toString()).isEqualTo(expectedUuid0);
-    assertThat(firstBatch.get(1).getInstanceId().toString()).isEqualTo(expectedUuid1);
-    
+    assertThat(firstBatch.get(0).getInstanceId().toString()).hasToString(expectedUuid0);
+    assertThat(firstBatch.get(1).getInstanceId().toString()).hasToString(expectedUuid1);
+
     // 1 (initial total) + 1 (first batch of 1000) + 1 (final remainder)
     verify(jobExecutionService, times(3)).save(isA(JobExecution.class));
     verify(errorLogService, times(0)).saveGeneralErrorWithMessageValues(any(), any(), any());
   }
 
-    @Test
+  @Test
+  @TestMate(name = "TestMate-7363dc5f2faf8525b6352ef92c3cbbe6")
   void testReadFileWhenCsvHasDuplicatesShouldLogErrorsAndIncrementStats() {
-    // TestMate-7363dc5f2faf8525b6352ef92c3cbbe6
     // Given
     var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
     var jobExecutionId = UUID.fromString("00000000-0000-0000-0000-000000000002");
     var instanceIdA = UUID.fromString("00000000-0000-0000-0000-00000000000A");
     var instanceIdB = UUID.fromString("00000000-0000-0000-0000-00000000000B");
-    var fileDefinition = new FileDefinition()
-        .id(fileDefinitionId)
-        .jobExecutionId(jobExecutionId)
-        .fileName("duplicates.csv")
-        .uploadFormat(FileDefinition.UploadFormatEnum.CSV);
-    var jobExecution = new JobExecution()
-        .id(jobExecutionId)
-        .progress(new JobExecutionProgress().total(0).readIds(0).exported(0).failed(0));
+    var jobExecution =
+        new JobExecution()
+            .id(jobExecutionId)
+            .progress(new JobExecutionProgress().total(0).readIds(0).exported(0).failed(0));
     var csvContent = String.format("%s\n%s\n%s", instanceIdA, instanceIdA, instanceIdB);
-    var commonExportStatistic = new CommonExportStatistic();
     when(jobExecutionService.getById(jobExecutionId)).thenReturn(jobExecution);
     // Two passes: one for counting lines, one for processing
     when(s3Client.read(anyString()))
@@ -418,17 +404,35 @@ private FolioS3Client s3Client;
         .thenReturn(new ByteArrayInputStream(csvContent.getBytes(StandardCharsets.UTF_8)));
     // Stub the repository to return 2 unique IDs found in the DB after processing
     when(exportIdEntityRepository.countByJobExecutionId(jobExecutionId)).thenReturn(2L);
-    // Use doAnswer to capture a copy of the batch because the implementation clears the list reference
+    // Use doAnswer to capture a copy of the batch because the implementation clears the list
+    // reference
     List<ExportIdEntity> capturedEntities = new java.util.ArrayList<>();
-    doAnswer(invocation -> {
-      List<ExportIdEntity> batchArg = invocation.getArgument(0);
-      capturedEntities.addAll(new java.util.ArrayList<>(batchArg));
-      return null;
-    }).when(insertExportIdService).saveBatch(any());
-    var inputFileProcessorInternal = new org.folio.dataexp.service.InputFileProcessor(
-        exportIdEntityRepository, s3Client, searchClient, errorLogService, jobExecutionService, insertExportIdService);
+    doAnswer(
+            invocation -> {
+              List<ExportIdEntity> batchArg = invocation.getArgument(0);
+              capturedEntities.addAll(new java.util.ArrayList<>(batchArg));
+              return null;
+            })
+        .when(insertExportIdService)
+        .saveBatch(any());
+    var inputFileProcessorInternal =
+        new org.folio.dataexp.service.InputFileProcessor(
+            exportIdEntityRepository,
+            s3Client,
+            searchClient,
+            errorLogService,
+            jobExecutionService,
+            insertExportIdService);
+    var commonExportStatistic = new CommonExportStatistic();
+    var fileDefinition =
+        new FileDefinition()
+            .id(fileDefinitionId)
+            .jobExecutionId(jobExecutionId)
+            .fileName("duplicates.csv")
+            .uploadFormat(FileDefinition.UploadFormatEnum.CSV);
     // When
-    inputFileProcessorInternal.readFile(fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
+    inputFileProcessorInternal.readFile(
+        fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
     // Then
     assertThat(jobExecution.getProgress().getTotal()).isEqualTo(3);
     assertThat(jobExecution.getProgress().getReadIds()).isEqualTo(3);
@@ -437,139 +441,151 @@ private FolioS3Client s3Client;
     assertThat(capturedEntities).hasSize(2);
     assertThat(capturedEntities.stream().map(ExportIdEntity::getInstanceId).toList())
         .containsExactlyInAnyOrder(instanceIdA, instanceIdB);
-    verify(errorLogService).saveGeneralErrorWithMessageValues(
-        eq(ERROR_DUPLICATED_IDS.getCode()),
-        eq(List.of(instanceIdA.toString(), "2")),
-        eq(jobExecutionId));
+    verify(errorLogService)
+        .saveGeneralErrorWithMessageValues(
+            ERROR_DUPLICATED_IDS.getCode(), List.of(instanceIdA.toString(), "2"), jobExecutionId);
     verify(jobExecutionService, atLeastOnce()).save(isA(JobExecution.class));
   }
 
-    @Test
+  @Test
   @SneakyThrows
   void testReadFileWhenUploadFormatIsCqlShouldSubmitSearchJobAndProcessResults() {
     // TestMate-1e539259a7e54e170459af439c9c3dda
     // Given
-    var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
-    var jobExecutionId = UUID.fromString("00000000-0000-0000-0000-000000000002");
-    var searchJobId = UUID.fromString("00000000-0000-0000-0000-000000000003");
     var instanceId = UUID.fromString("00000000-0000-0000-0000-00000000000A");
-    var cqlQuery = "cql.allRecords=1";
-    var fileName = "query.cql";
-    var fileDefinition = new FileDefinition()
-        .id(fileDefinitionId)
-        .jobExecutionId(jobExecutionId)
-        .fileName(fileName)
-        .uploadFormat(FileDefinition.UploadFormatEnum.CQL);
-    var jobExecution = new JobExecution()
-        .id(jobExecutionId)
-        .progress(new JobExecutionProgress().total(0).readIds(0).exported(0).failed(0));
-    
-    var idsJobInProgress = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.IN_PROGRESS);
-    var idsJobCompleted = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.COMPLETED);
-    
+
     var resourceIds = mock(ResourceIds.class);
     // Use the actual generated nested class type to avoid compilation errors
     var mockResourceId = mock(org.folio.dataexp.domain.dto.ResourceIds.Id.class);
     when(mockResourceId.getId()).thenReturn(instanceId);
-    
+
     when(resourceIds.getTotalRecords()).thenReturn(1);
     when(resourceIds.getIds()).thenReturn(List.of(mockResourceId));
-    
-    var commonExportStatistic = new CommonExportStatistic();
-    var inputFileProcessor = new InputFileProcessor(
-        exportIdEntityRepository, s3Client, searchClient, errorLogService, jobExecutionService, insertExportIdService);
-    
+
+    inputFileProcessor =
+        new InputFileProcessor(
+            exportIdEntityRepository,
+            s3Client,
+            searchClient,
+            errorLogService,
+            jobExecutionService,
+            insertExportIdService);
+
     Field waitField = InputFileProcessor.class.getDeclaredField("waitSearchIdsTimeSeconds");
     waitField.setAccessible(true);
     waitField.set(inputFileProcessor, 20);
-    
-    when(s3Client.read(anyString())).thenReturn(new ByteArrayInputStream(cqlQuery.getBytes(StandardCharsets.UTF_8)));
+
+    var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
+    var jobExecutionId = UUID.fromString("00000000-0000-0000-0000-000000000002");
+    var searchJobId = UUID.fromString("00000000-0000-0000-0000-000000000003");
+    var fileName = "query.cql";
+    var cqlQuery = "cql.allRecords=1";
+    var jobExecution =
+        new JobExecution()
+            .id(jobExecutionId)
+            .progress(new JobExecutionProgress().total(0).readIds(0).exported(0).failed(0));
+    var idsJobInProgress = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.IN_PROGRESS);
+    var idsJobCompleted = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.COMPLETED);
+
+    when(s3Client.read(anyString()))
+        .thenReturn(new ByteArrayInputStream(cqlQuery.getBytes(StandardCharsets.UTF_8)));
     when(searchClient.submitIdsJob(any(IdsJobPayload.class))).thenReturn(idsJobInProgress);
     when(searchClient.getJobStatus(searchJobId.toString()))
         .thenReturn(idsJobInProgress)
         .thenReturn(idsJobCompleted);
     when(searchClient.getResourceIds(searchJobId.toString())).thenReturn(resourceIds);
     when(jobExecutionService.getById(jobExecutionId)).thenReturn(jobExecution);
-    
+    var fileDefinition =
+        new FileDefinition()
+            .id(fileDefinitionId)
+            .jobExecutionId(jobExecutionId)
+            .fileName(fileName)
+            .uploadFormat(FileDefinition.UploadFormatEnum.CQL);
+    var commonExportStatistic = new CommonExportStatistic();
+
     // When
-    inputFileProcessor.readFile(fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
-    
+    inputFileProcessor.readFile(
+        fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
+
     // Then
     var payloadCaptor = ArgumentCaptor.forClass(IdsJobPayload.class);
     verify(searchClient).submitIdsJob(payloadCaptor.capture());
     assertThat(payloadCaptor.getValue().getQuery()).isEqualTo(cqlQuery);
-    assertThat(payloadCaptor.getValue().getEntityType()).isEqualTo(IdsJobPayload.EntityType.INSTANCE);
+    assertThat(payloadCaptor.getValue().getEntityType())
+        .isEqualTo(IdsJobPayload.EntityType.INSTANCE);
     verify(searchClient, atLeast(2)).getJobStatus(searchJobId.toString());
     verify(searchClient).getResourceIds(searchJobId.toString());
-    
-    var batchCaptor = ArgumentCaptor.forClass(List.class);
+
     verify(insertExportIdService).saveBatch(batchCaptor.capture());
     List<ExportIdEntity> capturedBatch = batchCaptor.getValue();
     assertThat(capturedBatch).hasSize(1);
-    assertThat(capturedBatch.get(0).getInstanceId()).isEqualTo(instanceId);
-    assertThat(capturedBatch.get(0).getJobExecutionId()).isEqualTo(jobExecutionId);
+    assertThat(capturedBatch.getFirst().getInstanceId()).isEqualTo(instanceId);
+    assertThat(capturedBatch.getFirst().getJobExecutionId()).isEqualTo(jobExecutionId);
     assertThat(jobExecution.getProgress().getTotal()).isEqualTo(1);
     assertThat(jobExecution.getProgress().getReadIds()).isEqualTo(1);
     verify(jobExecutionService, atLeast(1)).save(jobExecution);
   }
 
-    @Test
+  @Test
+  @TestMate(name = "TestMate-7bec775a1cb3c9e884a6d907f10dbdec")
   @SneakyThrows
   void testReadFileWhenCqlSearchJobFailsShouldLogError() {
-    // TestMate-7bec775a1cb3c9e884a6d907f10dbdec
     // Given
-    var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
-    var jobExecutionId = UUID.fromString("00000000-0000-0000-0000-000000000002");
-    var searchJobId = UUID.fromString("00000000-0000-0000-0000-000000000003");
     var cqlQuery = "cql.allRecords=1";
-    var fileName = "query.cql";
-    var fileDefinition = new FileDefinition()
-        .id(fileDefinitionId)
-        .jobExecutionId(jobExecutionId)
-        .fileName(fileName)
-        .uploadFormat(FileDefinition.UploadFormatEnum.CQL);
-    
-    var idsJobError = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.ERROR);
-    
+
     // Use the real InputFileProcessor to execute the actual logic of readCqlFile
-    var realInputFileProcessor = new InputFileProcessor(
-        exportIdEntityRepository,
-        s3Client,
-        searchClient,
-        errorLogService,
-        jobExecutionService,
-        insertExportIdService
-    );
-    
+    var realInputFileProcessor =
+        new InputFileProcessor(
+            exportIdEntityRepository,
+            s3Client,
+            searchClient,
+            errorLogService,
+            jobExecutionService,
+            insertExportIdService);
+
     // Set the wait time to a value strictly greater than SEARCH_POLL_INTERVAL_SECONDS (5L)
     // Awaitility requires timeout > poll interval to avoid IllegalArgumentException
     Field waitField = InputFileProcessor.class.getDeclaredField("waitSearchIdsTimeSeconds");
     waitField.setAccessible(true);
     waitField.set(realInputFileProcessor, 10);
-    
+
     // Mocking dependencies
-    when(s3Client.read(anyString())).thenReturn(new ByteArrayInputStream(cqlQuery.getBytes(StandardCharsets.UTF_8)));
-    
+    when(s3Client.read(anyString()))
+        .thenReturn(new ByteArrayInputStream(cqlQuery.getBytes(StandardCharsets.UTF_8)));
+
     // Submit job returns the job info
+    var searchJobId = UUID.fromString("00000000-0000-0000-0000-000000000003");
     var idsJobInitial = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.IN_PROGRESS);
     when(searchClient.submitIdsJob(any(IdsJobPayload.class))).thenReturn(idsJobInitial);
-    
-    // Mock getJobStatus to return ERROR. 
+
+    // Mock getJobStatus to return ERROR.
     // The implementation calls it in until() and then again to check the final status.
+    var idsJobError = new IdsJob().withId(searchJobId).withStatus(IdsJob.Status.ERROR);
     when(searchClient.getJobStatus(searchJobId.toString())).thenReturn(idsJobError);
-    
+
     var commonExportStatistic = new CommonExportStatistic();
-    
+    var fileDefinitionId = UUID.fromString("00000000-0000-0000-0000-000000000001");
+    var jobExecutionId = UUID.fromString("00000000-0000-0000-0000-000000000002");
+    var fileName = "query.cql";
+    var fileDefinition =
+        new FileDefinition()
+            .id(fileDefinitionId)
+            .jobExecutionId(jobExecutionId)
+            .fileName(fileName)
+            .uploadFormat(FileDefinition.UploadFormatEnum.CQL);
+
     // When
-    realInputFileProcessor.readFile(fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
-    
+    realInputFileProcessor.readFile(
+        fileDefinition, commonExportStatistic, ExportRequest.IdTypeEnum.INSTANCE);
+
     // Then
     // Verify that the error was logged with the correct parameters
-    verify(errorLogService).saveGeneralErrorWithMessageValues(
-        eq(ERROR_INVALID_CQL_SYNTAX.getCode()),
-        eq(Collections.singletonList(fileName)),
-        eq(jobExecutionId));
-    
+    verify(errorLogService)
+        .saveGeneralErrorWithMessageValues(
+            ERROR_INVALID_CQL_SYNTAX.getCode(),
+            Collections.singletonList(fileName),
+            jobExecutionId);
+
     // Verify search client interactions
     verify(searchClient, atLeastOnce()).getJobStatus(searchJobId.toString());
     verify(searchClient, never()).getResourceIds(anyString());
@@ -689,24 +705,10 @@ private FolioS3Client s3Client;
     }
   }
 
-  private static class Scenario {
-    final FileDefinitionEntity fileDefinitionEntity;
-    final JobProfileEntity jobProfileEntity;
-    final MappingProfileEntity mappingProfileEntity;
-    final JobExecution jobExecution;
-    final User user;
-
-    Scenario(
-        FileDefinitionEntity fileDefinitionEntity,
-        JobProfileEntity jobProfileEntity,
-        MappingProfileEntity mappingProfileEntity,
-        JobExecution jobExecution,
-        User user) {
-      this.fileDefinitionEntity = fileDefinitionEntity;
-      this.jobProfileEntity = jobProfileEntity;
-      this.mappingProfileEntity = mappingProfileEntity;
-      this.jobExecution = jobExecution;
-      this.user = user;
-    }
-  }
+  private record Scenario(
+      FileDefinitionEntity fileDefinitionEntity,
+      JobProfileEntity jobProfileEntity,
+      MappingProfileEntity mappingProfileEntity,
+      JobExecution jobExecution,
+      User user) {}
 }
